--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,9 @@
 [phases.setup]
 nixPkgs = ["php", "phpPackages.composer", "nodejs"]
 
+[phases.setup.env]
+phpExtensions = ["gd"]
+
 [phases.install]
 cmds = [
   "composer install --no-dev --optimize-autoloader",
@@ -12,9 +15,7 @@ cmds = [
 cmds = [
   "php artisan key:generate --force",
   "php artisan config:clear",
-  "php artisan config:cache",
-  "php artisan route:cache",
-  "php artisan view:cache"
+  "php artisan config:cache"
 ]
 
 [start]
